@@ -10,15 +10,20 @@ import com.myhomelibcorp.ui.service.UiBackgroundExecutor;
 import com.myhomelibcorp.ui.util.UiExecutor;
 import com.myhomelibcorp.ui.viewmodel.ApplicationState;
 import javafx.fxml.FXML;
-import javafx.scene.control.*;
+import javafx.scene.control.Button;
+import javafx.scene.control.Label;
+import javafx.scene.control.ProgressBar;
+import javafx.scene.control.TextField;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.io.File;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 
@@ -27,197 +32,194 @@ import java.util.concurrent.atomic.AtomicBoolean;
 @Slf4j
 public class ImportWorkspaceController {
 
-    private final ImportFileUseCase importFileUseCase;
     private final ImportDirectoryUseCase importDirectoryUseCase;
+    private final ImportFileUseCase importFileUseCase;
     private final UiBackgroundExecutor executor;
     private final FileChooserService fileChooserService;
     private final DialogService dialogService;
     private final ApplicationState appState;
 
-    @FXML private TextField pathField;
+    @Value("${app.import.batch-size:500}")
+    private int defaultBatchSize;
+
+    @FXML private TextField directoryField;
+    @FXML private TextField fileField;
     @FXML private Label statusLabel;
-    @FXML private Label foundBooksLabel;
-    @FXML private Label newBooksLabel;
-    @FXML private Label duplicatesLabel;
-    @FXML private Label errorsLabel;
     @FXML private ProgressBar progressBar;
-    @FXML private Label currentFileLabel;
-    @FXML private Button selectButton;
-    @FXML private Button startButton;
-    @FXML private Button pauseButton;
+    @FXML private Label progressLabel;
+    @FXML private Label foundFilesLabel;
+    @FXML private Label importedBooksLabel;
+    @FXML private Label errorsLabel;
     @FXML private Button cancelButton;
 
-    private AtomicBoolean cancelFlag = new AtomicBoolean(false);
-    private AtomicBoolean pausedFlag = new AtomicBoolean(false);
-    private volatile boolean isRunning = false;
+    private final AtomicBoolean cancelFlag = new AtomicBoolean(false);
+    private volatile boolean importRunning = false;
 
     @FXML
     public void initialize() {
-        progressBar.setProgress(0);
-        updateButtons(false);
-        statusLabel.setText("Готово до імпорту");
+        if (cancelButton != null) {
+            cancelButton.setDisable(true);
+        }
+        updateStats(0, 0, 0);
     }
 
     @FXML
-    private void onSelectDirectory() {
+    private void onChooseDirectory() {
         Stage stage = new Stage();
-        File dir = fileChooserService.chooseDirectory(stage, "Виберіть каталог з книгами");
+        File dir = fileChooserService.chooseDirectory(stage, "Виберіть папку з книгами");
         if (dir != null) {
-            pathField.setText(dir.getAbsolutePath());
-            // Спроба підрахувати кількість файлів
-            // Для реальної роботи потрібно викликати LibraryScanner
-            foundBooksLabel.setText("Знайдено книг: ...");
+            directoryField.setText(dir.getAbsolutePath());
         }
     }
 
     @FXML
-    private void onSelectFile() {
+    private void onChooseFile() {
         Stage stage = new Stage();
-        List<FileChooser.ExtensionFilter> filters = List.of(
-                new FileChooser.ExtensionFilter("FB2 файли", "*.fb2", "*.fbd"),
-                new FileChooser.ExtensionFilter("INPX файли", "*.inpx", "*.inp"),
-                new FileChooser.ExtensionFilter("Всі файли", "*.*")
-        );
-        File file = fileChooserService.chooseFile(stage, "Виберіть файл для імпорту", filters);
+        File file = fileChooserService.chooseFile(stage, "Виберіть файл для імпорту",
+                List.of(
+                        new FileChooser.ExtensionFilter("Всі підтримувані", "*.fb2", "*.fbd", "*.inpx", "*.inp", "*.zip", "*.fb2zip", "*.fb2.zip"),
+                        new FileChooser.ExtensionFilter("FB2 файли", "*.fb2", "*.fbd"),
+                        new FileChooser.ExtensionFilter("INPX файли", "*.inpx", "*.inp"),
+                        new FileChooser.ExtensionFilter("ZIP архіви", "*.zip", "*.fb2zip", "*.fb2.zip")
+                ));
         if (file != null) {
-            pathField.setText(file.getAbsolutePath());
+            fileField.setText(file.getAbsolutePath());
         }
     }
 
     @FXML
-    private void onStartImport() {
-        String path = pathField.getText();
+    private void onImportDirectory() {
+        String path = directoryField.getText();
         if (path == null || path.isBlank()) {
-            dialogService.showError("Помилка", "Виберіть каталог або файл");
+            dialogService.showError("Помилка", "Виберіть папку для імпорту");
             return;
         }
-
-        Path selectedPath = Path.of(path);
-        if (selectedPath.toFile().isDirectory()) {
-            startDirectoryImport(selectedPath);
-        } else if (selectedPath.toFile().isFile()) {
-            startFileImport(selectedPath);
-        } else {
-            dialogService.showError("Помилка", "Шлях не існує");
+        Path dir = Paths.get(path);
+        if (!dir.toFile().exists() || !dir.toFile().isDirectory()) {
+            dialogService.showError("Помилка", "Папка не існує");
+            return;
         }
-    }
-
-    private void startDirectoryImport(Path directory) {
-        isRunning = true;
-        cancelFlag.set(false);
-        pausedFlag.set(false);
-        updateButtons(true);
-        statusLabel.setText("Імпорт каталогу...");
-        progressBar.setProgress(0);
-
-        ImportContext context = ImportContext.builder()
-                .rootDirectory(directory)
-                .batchSize(500)
-                .indexAfterSave(true)
-                .progressListener(progress -> UiExecutor.runOnUiThread(() -> progressBar.setProgress(progress)))
-                .statusConsumer(status -> UiExecutor.runOnUiThread(() -> statusLabel.setText(status)))
-                .cancelFlag(cancelFlag)
-                .build();
-
-        executor.submit(() -> importDirectoryUseCase.execute(context))
-                .thenAccept(result -> UiExecutor.runOnUiThread(() -> {
-                    isRunning = false;
-                    updateButtons(false);
-                    showResults(result);
-                }))
-                .exceptionally(ex -> {
-                    UiExecutor.runOnUiThread(() -> {
-                        isRunning = false;
-                        updateButtons(false);
-                        statusLabel.setText("Помилка: " + ex.getMessage());
-                        dialogService.showError("Помилка імпорту", ex.getMessage());
-                    });
-                    log.error("Import failed", ex);
-                    return null;
-                });
-    }
-
-    private void startFileImport(Path file) {
-        isRunning = true;
-        cancelFlag.set(false);
-        pausedFlag.set(false);
-        updateButtons(true);
-        statusLabel.setText("Імпорт файлу...");
-        progressBar.setProgress(0);
-
-        ImportContext context = ImportContext.builder()
-                .file(file)
-                .batchSize(500)
-                .indexAfterSave(true)
-                .progressListener(progress -> UiExecutor.runOnUiThread(() -> progressBar.setProgress(progress)))
-                .statusConsumer(status -> UiExecutor.runOnUiThread(() -> statusLabel.setText(status)))
-                .cancelFlag(cancelFlag)
-                .build();
-
-        executor.submit(() -> importFileUseCase.execute(context))
-                .thenAccept(result -> UiExecutor.runOnUiThread(() -> {
-                    isRunning = false;
-                    updateButtons(false);
-                    showResults(result);
-                }))
-                .exceptionally(ex -> {
-                    UiExecutor.runOnUiThread(() -> {
-                        isRunning = false;
-                        updateButtons(false);
-                        statusLabel.setText("Помилка: " + ex.getMessage());
-                        dialogService.showError("Помилка імпорту", ex.getMessage());
-                    });
-                    log.error("Import failed", ex);
-                    return null;
-                });
-    }
-
-    private void showResults(ImportResult result) {
-        foundBooksLabel.setText("Знайдено книг: " + (result.imported() + result.skipped() + result.duplicates()));
-        newBooksLabel.setText("Нових: " + result.imported());
-        duplicatesLabel.setText("Дублікатів: " + result.duplicates());
-        errorsLabel.setText("Помилок: " + result.errors());
-        statusLabel.setText("Імпорт завершено за " + result.durationMs() + " мс");
-        progressBar.setProgress(1.0);
+        startImport(() -> importDirectoryUseCase.execute(createContext(dir)));
     }
 
     @FXML
-    private void onPause() {
-        if (isRunning) {
-            pausedFlag.set(!pausedFlag.get());
-            pauseButton.setText(pausedFlag.get() ? "Продовжити" : "Пауза");
-            statusLabel.setText(pausedFlag.get() ? "На паузі" : "Продовжено");
+    private void onImportFile() {
+        String path = fileField.getText();
+        if (path == null || path.isBlank()) {
+            dialogService.showError("Помилка", "Виберіть файл для імпорту");
+            return;
         }
+        Path file = Paths.get(path);
+        if (!file.toFile().exists()) {
+            dialogService.showError("Помилка", "Файл не існує");
+            return;
+        }
+        startImport(() -> {
+            ImportContext context = ImportContext.builder()
+                    .file(file)
+                    .batchSize(defaultBatchSize)
+                    .indexAfterSave(true)
+                    .cancelFlag(cancelFlag)
+                    .progressListener(this::updateProgress)
+                    .statusConsumer(this::updateStatus)
+                    .build();
+            return importFileUseCase.execute(context);
+        });
+    }
+
+    private ImportContext createContext(Path directory) {
+        return ImportContext.builder()
+                .rootDirectory(directory)
+                .batchSize(defaultBatchSize)
+                .indexAfterSave(true)
+                .cancelFlag(cancelFlag)
+                .progressListener(this::updateProgress)
+                .statusConsumer(this::updateStatus)
+                .build();
+    }
+
+    private void startImport(java.util.concurrent.Callable<ImportResult> task) {
+        if (importRunning) {
+            dialogService.showWarning("Увага", "Імпорт вже виконується", "Зачекайте завершення поточного імпорту");
+            return;
+        }
+        importRunning = true;
+        cancelFlag.set(false);
+        if (cancelButton != null) {
+            cancelButton.setDisable(false);
+        }
+        updateStats(0, 0, 0);
+        setStatus("Імпорт розпочато...");
+        setProgress(0);
+
+        executor.submit(task)
+                .thenAccept(result -> UiExecutor.runOnUiThread(() -> {
+                    importRunning = false;
+                    if (cancelButton != null) {
+                        cancelButton.setDisable(true);
+                    }
+                    setStatus("Імпорт завершено. Додано " + result.imported() + " книг");
+                    updateStats(result.imported(), result.errors(), 0);
+                    appState.getStatusBar().setStatusText("Імпорт завершено: +" + result.imported() + " книг");
+                }))
+                .exceptionally(ex -> {
+                    UiExecutor.runOnUiThread(() -> {
+                        importRunning = false;
+                        if (cancelButton != null) {
+                            cancelButton.setDisable(true);
+                        }
+                        if (cancelFlag.get()) {
+                            setStatus("Імпорт скасовано");
+                        } else {
+                            setStatus("Помилка імпорту: " + ex.getMessage());
+                            dialogService.showError("Помилка", "Не вдалося виконати імпорт: " + ex.getMessage());
+                        }
+                    });
+                    log.error("Import failed", ex);
+                    return null;
+                });
     }
 
     @FXML
     private void onCancel() {
-        if (isRunning) {
+        if (importRunning) {
             cancelFlag.set(true);
-            statusLabel.setText("Скасування...");
-            updateButtons(false);
-        }
-    }
-
-    private void updateButtons(boolean running) {
-        startButton.setDisable(running);
-        selectButton.setDisable(running);
-        pauseButton.setDisable(!running);
-        cancelButton.setDisable(!running);
-        if (!running) {
-            pauseButton.setText("Пауза");
+            if (cancelButton != null) {
+                cancelButton.setDisable(true);
+            }
+            setStatus("Скасування...");
         }
     }
 
     @FXML
-    private void onClear() {
-        pathField.clear();
-        foundBooksLabel.setText("Знайдено книг: 0");
-        newBooksLabel.setText("Нових: 0");
-        duplicatesLabel.setText("Дублікатів: 0");
-        errorsLabel.setText("Помилок: 0");
-        progressBar.setProgress(0);
-        statusLabel.setText("Готово до імпорту");
-        currentFileLabel.setText("");
+    private void onSettings() {
+        dialogService.showInfo("Налаштування", "Налаштування імпорту", "Функція поки що не реалізована");
+    }
+
+    private void setStatus(String text) {
+        UiExecutor.runOnUiThread(() -> statusLabel.setText(text));
+    }
+
+    private void updateStatus(String text) {
+        UiExecutor.runOnUiThread(() -> statusLabel.setText(text));
+    }
+
+    private void setProgress(double value) {
+        UiExecutor.runOnUiThread(() -> {
+            progressBar.setProgress(value);
+            progressLabel.setText(String.format("%.0f%%", value * 100));
+        });
+    }
+
+    private void updateProgress(double value) {
+        setProgress(value);
+    }
+
+    private void updateStats(long imported, long errors, long found) {
+        UiExecutor.runOnUiThread(() -> {
+            importedBooksLabel.setText(String.valueOf(imported));
+            errorsLabel.setText(String.valueOf(errors));
+            foundFilesLabel.setText(String.valueOf(found));
+        });
     }
 }
